⌨️ Added Image to Create Offer for Seller
