# docs/swagger.json
@@ -2570,7 +2570,7 @@
                 ],
                 "description": "Create new offer for the seller",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -2581,13 +2581,50 @@
                 "summary": "Create an offer",
                 "parameters": [
                     {
-                        "description": "Create Offer Request",
-                        "name": "req",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/req.CreateOfferReq"
-                        }
+                        "type": "file",
+                        "description": "Image file for the dish",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "categoryId",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "endDate",
+                        "in": "formData"
+                    },
+                    {
+                        "maximum": 100,
+                        "type": "integer",
+                        "name": "offerPercentage",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "offerTitle",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "startDate",
+                        "in": "formData"
+                    },
+                    {
+                        "enum": [
+                            "ACTIVE",
+                            "CLOSED"
+                        ],
+                        "type": "string",
+                        "name": "status",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -3330,6 +3367,9 @@
                 "endDate": {
                     "type": "string"
                 },
+                "imageUrl": {
+                    "type": "string"
+                },
                 "offerId": {
                     "type": "integer"
                 },
@@ -3654,40 +3694,6 @@
                     "enum": [
                         "ACTIVE",
                         "INACTIVE"
-                    ]
-                }
-            }
-        },
-        "req.CreateOfferReq": {
-            "type": "object",
-            "required": [
-                "categoryId",
-                "offerPercentage",
-                "offerTitle",
-                "status"
-            ],
-            "properties": {
-                "categoryId": {
-                    "type": "integer"
-                },
-                "endDate": {
-                    "type": "string"
-                },
-                "offerPercentage": {
-                    "type": "integer",
-                    "maximum": 100
-                },
-                "offerTitle": {
-                    "type": "string"
-                },
-                "startDate": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string",
-                    "enum": [
-                        "ACTIVE",
-                        "CLOSED"
                     ]
                 }
             }
